--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.471.0",
+    "motion": "^12.6.3",
     "next": "15.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
