--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "dotenv": "^16.4.7",
     "lucide-react": "^0.471.0",
     "motion": "^12.6.3",
-    "next": "15.1.4",
+    "next": "^15.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
