--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.4",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-hook/resize-observer": "^2.0.2",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
