--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,6 +17,7 @@ idna==3.10
 inflection==0.5.1
 oauthlib==3.2.2
 packaging==25.0
+pillow==11.2.1
 psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
